# channelherald-autodigest

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml
.claude/: settings.local.json
.harness/: AGENTS.md  CODER_PROMPT.md  JUDGE_PROMPT.md  JUDGE_REPORT.md  PLANNER_PROMPT.md  RETRO.md  original_spec.md  pyproject.toml  spec.md
src/channelherald_autodigest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/digest/: article_rater.py  config.py  digest.py  digest_builder.py  imap_fetch.py  link_extractor.py  llm.py  scraper.py  seen_urls.py  smtp_send.py
src/digest/prompts/: summary_schema.txt  summary_system.txt
tests/: test_article_rater.py  test_config.py  test_digest.py  test_digest_builder.py  test_imap_fetch.py  test_link_extractor.py  test_llm.py  test_scraper.py  test_seen_urls.py  test_smtp_send.py
